@@ -9,18 +9,25 @@ if( /LIBSPECTRUM_SNAP_ACCESSORS/ ) {
 
     my( $type, $name, $indexed ) = split;
 
+    my $return_type;
+    if( $type =~ /^(.*)\*/ ) {
+	$return_type = "$1 WIN32_DLL *";
+    } else {
+	$return_type = "$type WIN32_DLL";
+    }
+
     if( $indexed ) {
 
 	print << "CODE";
-$type libspectrum_snap_$name( libspectrum_snap *snap, int idx );
-void libspectrum_snap_set_$name( libspectrum_snap *snap, int idx, $type $name );
+$return_type libspectrum_snap_$name( libspectrum_snap *snap, int idx );
+void WIN32_DLL libspectrum_snap_set_$name( libspectrum_snap *snap, int idx, $type $name );
 CODE
 
     } else {
 
 	print << "CODE";
-$type libspectrum_snap_$name( libspectrum_snap *snap );
-void libspectrum_snap_set_$name( libspectrum_snap *snap, $type $name );
+$return_type libspectrum_snap_$name( libspectrum_snap *snap );
+void WIN32_DLL libspectrum_snap_set_$name( libspectrum_snap *snap, $type $name );
 CODE
 
     }
@@ -44,18 +51,25 @@ if( /LIBSPECTRUM_TAPE_ACCESSORS/ ) {
 	
 	my( $type, $name, $indexed, undef ) = split;
 	
+	my $return_type;
+	if( $type =~ /^(.*)\*/ ) {
+	    $return_type = "$1 WIN32_DLL *";
+	} else {
+	    $return_type = "$type WIN32_DLL";
+	}
+
 	if( $indexed ) {
 
 	  print << "CODE";
-$type libspectrum_tape_block_$name( libspectrum_tape_block *block, size_t idx );
-libspectrum_error libspectrum_tape_block_set_$name( libspectrum_tape_block *block, $type \*$name );
+$return_type libspectrum_tape_block_$name( libspectrum_tape_block *block, size_t idx );
+libspectrum_error WIN32_DLL libspectrum_tape_block_set_$name( libspectrum_tape_block *block, $type \*$name );
 CODE
 
 	} else {
 
 	print << "CODE";
-$type libspectrum_tape_block_$name( libspectrum_tape_block *block );
-libspectrum_error libspectrum_tape_block_set_$name( libspectrum_tape_block *block, $type $name );
+$return_type libspectrum_tape_block_$name( libspectrum_tape_block *block );
+libspectrum_error WIN32_DLL libspectrum_tape_block_set_$name( libspectrum_tape_block *block, $type $name );
 CODE
     
 	}
